k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trading-journal-entry
  namespace: trading-journal
  labels:
    app: trading-journal-entry
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: trading-journal-entry
